--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Test page1</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- отображение для мобильных девайсов -->
-        <link rel="stylesheet" href="index(test1).css" />
+        <link rel="stylesheet" href="index.css" />
     </head>
 
     <body>
