--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <hr>   <!-- Полоса-разделитель -->
             <p id="poker">If you&rsquo;re into &ldquo;web typography,&rdquo; you&rsquo;ll also <a class="find" href="https://www.google.ru/webhp?hl=ru&sa=X&ved=0ahUKEwj44fmJ97SCAxVQ87sIHRDHB6MQPAgJ" target="_blank">find</a> y
                 ourself using curly quotes quite a bit.</p>
-            <button type="button">Push me</button> <br />
+            <button type="button" title="Ну, нажми уже!">Push me</button> <br />
             <br />
             <a href="#" class="knopka">кнопка</a>
 
